@@ -7,6 +7,9 @@
 
  * Fix wheels workflow. (Jelmer Vernooĳ)
 
+ * ``Config.set`` replaces values by default, ``Config.add``
+   appends them. (Jelmer Vernooĳ, #1545)
+
 0.22.8	2025-03-02
 
  * Allow passing in plain strings to ``dulwich.porcelain.tag_create``
